--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,8 @@ img{
     main {
         /*grid-template: auto;*/
         grid-template-areas:
-        "section1 section2"
-        "section3 section4";
+        "section1 section2 section3"
+        "section4 section5 section6";
         grid-gap: 1.5em;
     }
     header {
