--- a/css/mypro.css
+++ b/css/mypro.css
@@ -30,14 +30,17 @@ nav li {
     
 }
 .mainMenu a:link, .mainMenu a:visited{
-    color:rgb(162, 5, 0);    
+    color:#ffffff;    
     display: block;
     padding: 0.5em 0.5em;
     text-align: center;
     width: 5em;
+    border-radius: 25px;
+    border: solid #ffffff;
 }
 .mainMenu a:hover, .mainMenu a:active {
-    background-color: rgb(162, 5, 0);;
+    border-radius: 25px;
+    background-color: #000000b0;
 }
 .Menu, .contactLogo{
     width: 48px;
