--- a/css/photo.css
+++ b/css/photo.css
@@ -1,4 +1,4 @@
- header {
+header {
     border-radius: 25px;
     font-size: 1.5em;
     color : rgb(255, 255, 255);
@@ -47,7 +47,8 @@ nav li {
     height: 48px;
 }
 img{
-    max-width: 100%;
+    width: auto;
+    height: auto;
 }
 
 main {
@@ -56,14 +57,8 @@ main {
     margin-right: 0.5em;
     list-style-image: url('../image/list.png');
 }
-section {
-    border-radius: 25px;
-    border: solid  #ffffff;
-    padding: 0.5em 1em;
-    box-shadow: 5px 5px 5px #ffffff;
-    background-color: #000000b0;
-    
-}
+
+
 .sectionHeader {
     color:#ffffff;
     text-align: center;
@@ -79,6 +74,15 @@ section {
     grid-area: section2;} 
 #Photo{
     grid-area: section3;} 
+
+.block1, block2, block3{
+    width: 120px;
+	height: 120px;
+	margin: 20px;
+	float: left;
+}
+
+
 footer {
     display: grid;
     border-radius: 25px;
@@ -129,15 +133,16 @@ footer {
         margin-bottom: 0.8em;
         
     }
+    
 }
 @media screen and (min-width: 1150px){
     nav {
         flex-wrap: wrap;
     }
     main {
+        
         grid-template-areas:
-        "section1 section2"
-        "section3 section4";
+        "section1 section2 section3";
         grid-gap: 1.5em;
     }
     header {
